[gd_scene load_steps=25 format=2]

[ext_resource path="res://actors/enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/enemies/demon/demon_sheet.png" type="Texture" id=2]
[ext_resource path="res://actors/enemies/demon/demon_behaviour.gd" type="Script" id=3]
[ext_resource path="res://actors/enemies/demon/actor_data_demon.tres" type="Resource" id=4]
[ext_resource path="res://actors/enemies/demon/palettes/palette_demon_yellow.png" type="Texture" id=5]
[ext_resource path="res://actors/enemies/demon/palettes/palette_demon_blue.png" type="Texture" id=6]
[ext_resource path="res://actors/enemies/demon/palettes/palette_demon_red.png" type="Texture" id=7]
[ext_resource path="res://actors/enemies/demon/sfx/demon_dash.wav" type="AudioStream" id=8]
[ext_resource path="res://shader/color_swap.shader" type="Shader" id=9]
[ext_resource path="res://actors/enemies/demon/palettes/palette_demon_default.png" type="Texture" id=10]
[ext_resource path="res://actors/enemies/demon/sfx/demon_death.wav" type="AudioStream" id=11]
[ext_resource path="res://actors/enemies/demon/sfx/demon_hurt.wav" type="AudioStream" id=12]
[ext_resource path="res://actors/enemies/demon/sfx/demon_attack.wav" type="AudioStream" id=13]

[sub_resource type="Animation" id=11]
resource_name = "attack"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 5, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 8.0, 0.6 ],
"method": "start_jump"
}, {
"args": [ 0.0 ],
"method": "attack"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ ExtResource( 13 ) ],
"method": "play_sfx"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=13]
resource_name = "move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/palette = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=15]
resource_local_to_scene = true
extents = Vector2( 5, 2 )

[sub_resource type="RectangleShape2D" id=16]
resource_local_to_scene = true
extents = Vector2( 6, 3 )

[sub_resource type="RectangleShape2D" id=17]
resource_local_to_scene = true
extents = Vector2( 4, 6 )

[sub_resource type="AudioStreamRandomPitch" id=8]
resource_local_to_scene = true
random_pitch = 1.5

[sub_resource type="AudioStreamRandomPitch" id=9]
resource_local_to_scene = true
audio_stream = ExtResource( 12 )

[sub_resource type="AudioStreamRandomPitch" id=6]
audio_stream = ExtResource( 8 )

[sub_resource type="AudioStreamRandomPitch" id=10]
resource_local_to_scene = true
audio_stream = ExtResource( 11 )

[node name="Demon" instance=ExtResource( 1 )]
script = ExtResource( 3 )
actor_data = ExtResource( 4 )

[node name="AnimationPlayer" parent="." index="0"]
anims/attack = SubResource( 11 )
anims/idle = SubResource( 12 )
anims/move = SubResource( 13 )

[node name="Body" parent="Pivot/BodyPivot" index="1"]
material = SubResource( 14 )
texture = ExtResource( 2 )
hframes = 12
frame = 6

[node name="Pushbox" parent="." index="2"]
shape = SubResource( 15 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 16 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 17 )

[node name="AttackCooldown" parent="." index="7"]
wait_time = 4.0

[node name="BodyPaletteSwapper" parent="." index="10"]
palette_default = ExtResource( 10 )
palette_red = ExtResource( 7 )
palette_blue = ExtResource( 6 )
palette_yellow = ExtResource( 5 )

[node name="SFX" parent="." index="11"]
stream = SubResource( 8 )
max_distance = 256.0

[node name="HurtSFX" parent="." index="12"]
stream = SubResource( 9 )

[node name="DashSFX" type="AudioStreamPlayer2D" parent="." index="13"]
stream = SubResource( 6 )
volume_db = -12.0
max_distance = 92.0
bus = "Sound Effects"

[node name="JumpDuration" type="Timer" parent="." index="14"]
one_shot = true

[node name="DashCooldown" type="Timer" parent="." index="15"]
wait_time = 4.0
one_shot = true

[node name="DashDuration" type="Timer" parent="." index="16"]
wait_time = 0.2
one_shot = true

[node name="DashFadeShadowCD" type="Timer" parent="." index="17"]
wait_time = 0.1
one_shot = true

[node name="Tween" type="Tween" parent="." index="18"]

[node name="Area2D" type="Area2D" parent="." index="19"]

[node name="DeathSFX" parent="." index="20"]
stream = SubResource( 10 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Hurtbox"]
